force-app/main/default/objects/Card__c/Card__c.object-meta.xml
<CustomObject>
    <description>These are child records against a board and are used to store work items</description>
    <label>Card</label>
    <nameField>
        <label>Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>