force-app/main/default/objects/Card__c/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Card Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>