force-app/main/default/objects/Card__c/fields/Due_Date_Passed__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Passed__c</fullName>
    <formula>IF(Due_Date__c&gt; TODAY(), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date Passed</label>
    <type>Checkbox</type>
</CustomField>