force-app/main/default/objects/Card__c/fields/Estimated_Effort__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Effort__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Estimated Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>