force-app/main/default/objects/Card__c/fields/Lane__c.field-meta.xml
<CustomField>
    <fullName>Lane__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lane</label>
    <referenceTo>Lane__c</referenceTo>
    <relationshipLabel>Cards</relationshipLabel>
    <relationshipName>Cards</relationshipName>
    <type>Lookup</type>
</CustomField>